# BayesFrag

./: .gitignore  LICENSE  README.md  Tutorial1.ipynb  Tutorial2.ipynb  Tutorial3.ipynb  bayesfrag-0.0.2-py3-none-any.whl  environment.yml  example_Application.ipynb  example_GMMcomp.ipynb  figures.ipynb  main_aquila_casestudy.py  modules.py  modules_shakemap.py  postprocess_results.ipynb  pyproject.toml  requirements.txt  res_test.nc  res_twodim_logIM_map.npz  sim_twodim.ipynb  test.ipynb  theoretical_background_postpred.md  utils_figures.py
bayesfrag/: README.md  __init__.py  gpr.py  inference.py  postprocess.py  sites.py  spatialcorrelation.py  utils.py
data/aquila/: README.md  gridmap.csv  gridmap_im_PGA_gmm_BindiEtAl2011.npz  gridmap_im_SAT0_300_gmm_BindiEtAl2011.npz  gridmap_im_SAT0_300_gmm_ChiouYoungs2014Italy.npz  precompute_gmm.py  stations_im_PGA_gmm_BindiEtAl2011.npz  stations_im_SAT0_300_gmm_BindiEtAl2011.npz  stations_im_SAT0_300_gmm_ChiouYoungs2014Italy.npz  survey.csv  survey_im_PGA_gmm_BindiEtAl2011.npz  survey_im_SAT0_300_gmm_BindiEtAl2011.npz  survey_im_SAT0_300_gmm_ChiouYoungs2014Italy.npz
data/tutorial1/: survey_withIM_PGA.csv
data/tutorial2/: gridmap.csv  gridmap_im_SAT0_300_gmm_BindiEtAl2011.npz  gridmap_im_SAT0_300_gmm_ChiouYoungs2014Italy.npz  stations.csv  stations_im_SAT0_300_gmm_ChiouYoungs2014Italy.npz  survey_im_SAT0_300_gmm_BindiEtAl2011.npz  survey_im_SAT0_300_gmm_ChiouYoungs2014Italy.npz
data/twodim/: gridmap.csv  gridmap_im_SAT0_300_GMM_BindiEtAl2011.csv  gridmap_im_SAT0_300_gmm_BindiEtAl2011.npz  rupture.json  stations.csv  stations_im_SAT0_300_GMM_BindiEtAl2011.csv  stations_im_SAT0_300_gmm_BindiEtAl2011.npz  survey.csv  survey2_im_SAT0_300_GMM_BindiEtAl2011.csv  survey2_xy.csv  (+1 more)
data_onedim/: OneDim_buildings.csv  OneDim_stations.csv  True_Frag_OneDim.nc  stations_withIM_PGA.csv  survey_withIM_PGA.csv
data_twodim/: True_Frag_TwoDim.nc  gridmap_im_SAT0_300_GMM_BindiEtAl2011.csv  stations.csv  stations_im_SAT0_300_GMM_BindiEtAl2011.csv  survey2.csv  survey_imT0_300_GMM1.csv
modules/: inference.py  results.py  shakemap.py  spatialcorrelation.py  utils.py
results/onedim/: res_IM.csv  (+3 more)
(+42 files in other folders)
